# docs/swagger.yaml
@@ -2,7 +2,7 @@ basePath: /api
 externalDocs:
   description: Repository
   url: https://github.com/JDKdevStudio/TheNexusBattlesII_Card_API_Reborn
-host: cards.thenexusbattles2.cloud
+host: localhost
 info:
   contact: {}
   description: Servicio API para acceder a las cartas del negocio
@@ -91,6 +91,176 @@ paths:
       summary: trae un documento tipo Carta
       tags:
       - Cartas
+  /consumible/:
+    patch:
+      consumes:
+      - multipart/form-data
+      description: este método recibe los parámetros de tipo Consumible y actualiza
+        la carta
+      parameters:
+      - description: Id de la carta
+        in: formData
+        name: id
+        required: true
+        type: string
+      - description: Imagen de la carta
+        in: formData
+        name: imagen
+        type: file
+      - description: Icono de la carta
+        in: formData
+        name: icono
+        type: string
+      - description: Nombre de la carta
+        in: formData
+        name: nombre
+        type: string
+      - description: Efecto de la carta
+        in: formData
+        name: efecto
+        type: string
+      - description: Efecto tipo héroe de la carta
+        in: formData
+        name: efectoHeroe
+        type: string
+      - description: Descripción de la carta
+        in: formData
+        name: descripcion
+        type: string
+      - description: '[Ecommerce] Precio de la carta'
+        in: formData
+        name: precio
+        type: integer
+      - description: '[Ecommerce] Descuento de la carta'
+        in: formData
+        name: descuento
+        type: integer
+      - description: '[Ecommerce] Stock de la carta'
+        in: formData
+        name: stock
+        type: integer
+      - description: Activar o desactivar la carta
+        in: formData
+        name: estado
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Documento creado exitosamente
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Parámetros de paginación inválidos
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Error interno en el servidor
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: actualiza un documento tipo Consumible
+      tags:
+      - Consumible
+    post:
+      consumes:
+      - multipart/form-data
+      description: este método recibe los parámetros de tipo Consumible y crea la
+        carta
+      parameters:
+      - description: Imagen de la carta
+        in: formData
+        name: imagen
+        required: true
+        type: file
+      - description: Icono de la carta
+        in: formData
+        name: icono
+        required: true
+        type: string
+      - description: Nombre de la carta
+        in: formData
+        name: nombre
+        required: true
+        type: string
+      - description: Clase de la carta
+        in: formData
+        name: clase
+        required: true
+        type: string
+      - description: Tipo de la carta
+        in: formData
+        name: tipo
+        required: true
+        type: string
+      - description: Colección de la carta
+        in: formData
+        name: coleccion
+        required: true
+        type: string
+      - description: Efecto de la carta
+        in: formData
+        name: efecto
+        required: true
+        type: string
+      - description: Efecto tipo héroe de la carta
+        in: formData
+        name: efectoHeroe
+        type: string
+      - description: Descripción de la carta
+        in: formData
+        name: descripcion
+        required: true
+        type: string
+      - description: '[Ecommerce] Precio de la carta'
+        in: formData
+        name: precio
+        required: true
+        type: integer
+      - description: '[Ecommerce] Descuento de la carta'
+        in: formData
+        name: descuento
+        required: true
+        type: integer
+      - description: '[Ecommerce] Stock de la carta'
+        in: formData
+        name: stock
+        required: true
+        type: integer
+      - description: Activar o desactivar la carta
+        in: formData
+        name: estado
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Documento creado exitosamente
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Parámetros de paginación inválidos
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Error interno en el servidor
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: crea un documento tipo Consumible
+      tags:
+      - Consumible
   /heroes/:
     patch:
       consumes:
@@ -263,6 +433,11 @@ paths:
         name: stock
         required: true
         type: integer
+      - description: Activar o desactivar la carta
+        in: formData
+        name: estado
+        required: true
+        type: boolean
       produces:
       - application/json
       responses:
