# routes/init.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"TheNexusBattlesII_Card_API_Reborn/controllers"
+	"os"
 
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -14,7 +15,7 @@ func Init(server *echo.Echo) {
 	//Endpoints de utilidad
 	server.GET("/", controllers.RedirectToDocs)
 	server.GET("/docs/*", echoSwagger.WrapHandler)
-	server.Static("/assets/", "assets")
+	server.Static("/assets/", os.Getenv("ASSETSFOLDER"))
 	//Endpoints de uso general
 	server.GET("/api/cartas/:id", controllers.GetObject)
 	server.GET("/api/cartas/", controllers.GetObjectList)
@@ -22,4 +23,6 @@ func Init(server *echo.Echo) {
 	server.POST("/api/heroes/", controllers.PostHeroe)
 	server.PATCH("api/heroes/", controllers.PatchHeroe)
 	//Endpoints para consumible
+	server.POST("/api/consumible/", controllers.PostConsumible)
+	server.PATCH("/api/consumible/", controllers.PatchConsumible)
 }
